--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,10 @@
+<div style="background: lavender; padding: 4px; padding-left: 16px; margin: 8px;">
+<h2>This is your chance to talk to a nonprofessional.</h2>
+<h3>Type anything and receive the answer of the stupid coach!</h3>
+<br>
 <form action="/answer">
   <input type="text" name="input">
-  <input type="submit" value="Ask!">
+  <input type="submit" value="Ask">
 </form>
+<br>
+</div>
