--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,2 +1,10 @@
+<div style="background: lightyellow; padding: 4px; padding-left: 16px; margin: 8px;">
 <p><strong>You:</strong> <%= @message %> </p>
-<p> <strong>Stupid Coach:</strong> <%= @answer %> </p>
+</div>
+<div style="background: lavender; padding: 4px; padding-left: 16px; margin: 8px;">
+  <p> <strong>Stupid Coach:</strong> <%= @answer %> </p>
+</div>
+<br>
+<div style="padding: 4px; padding-left: 16px; margin: 8px;">
+<p> <%= link_to "Send another message", ask_path %> </p>
+</div>
